--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ color:#eeeeee;
 width:650px;
 margin:0 auto;
 }
-.pictuer {
+.picture {
    background-color:FFFFFF;
   /* for IE */
   filter:alpha(opacity=50);
