--- a/main.css
+++ b/main.css
@@ -15,6 +15,8 @@ margin:0 auto;
   opacity:0.5;
   /* for Mozilla, Firefox */
   -moz-opacity:0.5;
+  
+  padding:0 auto;
 }
 .picture:hover {
    background-color:FFFFFF;
