--- a/main.css
+++ b/main.css
@@ -5,6 +5,28 @@ color:#eeeeee;
 }
 .container {
 width:600px;
+margin:70px auto ;
+}
+.picture {
+background-color:FFFFFF;
+/* for IE */
+filter:alpha(opacity=50);
+/* CSS3 standard */
+opacity:0.5;
+/* for Mozilla, Firefox */
+-moz-opacity:0.5;
+border:0 auto;
+}
+.picture:hover {
+background-color:FFFFFF;
+/* for IE */
+filter:alpha(opacity=100);
+/* CSS3 standard */
+opacity:1;
+/* for Mozilla, Firefox */
+-moz-opacity:1;
+}
+
 margin:0 auto;
 }
 .picture {
@@ -29,16 +51,56 @@ margin:0 auto;
 }
 
 footer {
-margin-bottom:200px;
+margin-bottom:80px;
 text-align:center;
 }
 footer ul li {
 width: 100px;
 display: inline-block;
 }
-a {
+footer a {
 color:gray;
 }
-a:hover {
+footer a:hover {
 color:white;
 }
+
+
+.link_movie{
+  position: fixed;  /*固定在網頁上不隨卷軸移動-fixed，若要隨卷軸移動用absolute*/
+  top: 35%;  /*設置垂直位置*/
+  right: -140px;  /*設置水平位置，依所放的內容多寡需要自行手動調整*/
+  background: #ffffff;  /*背景顏色*/
+  padding: 10px 15px;
+  border-radius: 10px;  /*圓角*/
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+}
+
+.link_movie:hover{  /*當滑鼠移至此區塊時，伸縮區塊*/
+  right: -10px;
+}
+
+.link_movie #title{
+  padding-right: 5px;  /*讓標題與連結中間有空隙*/
+}
+
+.link_about{
+  position: fixed;  /*固定在網頁上不隨卷軸移動-fixed，若要隨卷軸移動用absolute*/
+  top: 45%;  /*設置垂直位置*/
+  right: -155px;  /*設置水平位置，依所放的內容多寡需要自行手動調整*/
+  background: #ffffff;  /*背景顏色*/
+  padding: 10px 15px;
+  border-radius: 10px;  /*圓角*/
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+}
+
+.link_about:hover{  /*當滑鼠移至此區塊時，伸縮區塊*/
+  right: -10px;
+}
+
+.link_about #title{
+  padding-right: 5px;  /*讓標題與連結中間有空隙*/
+}
+
