--- a/main.css
+++ b/main.css
@@ -66,6 +66,8 @@ color:white;
 }
 
 
+
+
 .link_movie{
   position: fixed;  /*固定在網頁上不隨卷軸移動-fixed，若要隨卷軸移動用absolute*/
   top: 35%;  /*設置垂直位置*/
@@ -75,6 +77,7 @@ color:white;
   border-radius: 10px;  /*圓角*/
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
+  color:black;
 }
 
 .link_movie:hover{  /*當滑鼠移至此區塊時，伸縮區塊*/
@@ -83,6 +86,7 @@ color:white;
 
 .link_movie #title{
   padding-right: 5px;  /*讓標題與連結中間有空隙*/
+  color:black;
 }
 
 .link_about{
@@ -94,6 +98,7 @@ color:white;
   border-radius: 10px;  /*圓角*/
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
+  color:black;
 }
 
 .link_about:hover{  /*當滑鼠移至此區塊時，伸縮區塊*/
@@ -102,5 +107,6 @@ color:white;
 
 .link_about #title{
   padding-right: 5px;  /*讓標題與連結中間有空隙*/
+  color:black;
 }
 
